--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 	<footer>Autor: McAcos, grupo C. El uso de cualquier material audiovisual de esta web con fines comerciales queda prohibido por derechos de autor.</footer> <br><br>
 	
 	
-	
+	<script src = "interact.js"></script>
 	
 	</body>
 
