--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 	</div>
 	
-	<button onclick = "ocultarJuego()" type = "Título"> SOBRE EL JUEGO <img src = "flechaAbajo.png" id = "abajoJuego" Type = "flecha" </img> <img src = "flechaArriba.png" id = "arribaJuego" Type = "flecha" </img></button>
+	<button onclick = "ocultarJuego()" type = "Título"> SOBRE EL JUEGO <img src = "Fotos/flechaAbajo.png" id = "abajoJuego" Type = "flecha" </img> <img src = "Fotos/flechaArriba.png" id = "arribaJuego" Type = "flecha" </img></button>
 	
 	<div id = "Campaña">
 		<div id = "Historia" class = "ApartadosCampaña">
