--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 	</div>
 	
-	<button onclick = "ocultarJuego()" type = "Título"> SOBRE EL JUEGO <img src = "Fotos/flechaAbajo.png" id = "abajoJuego" Type = "flecha" </img> <img src = "Fotos/flechaArriba.png" id = "arribaJuego" Type = "flecha" </img></button>
+	<button onclick = "ocultarJuego()" type = "Título"> SOBRE EL JUEGO <img src = "Fotos/FlechaAbajo.png" id = "abajoJuego" Type = "flecha" </img> <img src = "Fotos/FlechaArriba.png" id = "arribaJuego" Type = "flecha" </img></button>
 	
 	<div id = "Campaña">
 		<div id = "Historia" class = "ApartadosCampaña">
@@ -141,7 +141,7 @@
 	</div>
 		
 		
-	<button onclick = "ocultarDinero()" id = "BotónDinero" type = "Título">APORTACIONES<img src = "Fotos/flechaAbajo.png" id = "abajoDinero" Type = "flecha" </img> <img src = "Fotos/flechaArriba.png" id = "arribaDinero" Type = "flecha" </img></button>
+	<button onclick = "ocultarDinero()" id = "BotónDinero" type = "Título">APORTACIONES<img src = "Fotos/FlechaAbajo.png" id = "abajoDinero" Type = "flecha" </img> <img src = "Fotos/FlechaArriba.png" id = "arribaDinero" Type = "flecha" </img></button>
 	
 	<div id = "Dinero">
 		<div class = "megaPadding">
@@ -219,28 +219,28 @@
 		</div>
 	</div>
 		
-	<button onclick = "ocultarPreguntas()" id = "BotónPreguntas" Type =  "Título">PREGUNTAS FRECUENTES<img src = "Fotos/flechaAbajo.png" id = "abajoPreguntas" Type = "flecha" </img> <img src = "Fotos/flechaArriba.png" id = "arribaPreguntas" Type = "flecha" </img></button>
+	<button onclick = "ocultarPreguntas()" id = "BotónPreguntas" Type =  "Título">PREGUNTAS FRECUENTES<img src = "Fotos/FlechaAbajo.png" id = "abajoPreguntas" Type = "flecha" </img> <img src = "Fotos/FlechaArriba.png" id = "arribaPreguntas" Type = "flecha" </img></button>
 		
 	<div id = "Preguntas">
-		<button class = "Pregunta" onclick = "alternarRespuesta(1)"><img src = "Fotos/flechaDerecha.png" class = "flechaHorizontal"</img>¿Cuándo saldrá el juego?</button>
+		<button class = "Pregunta" onclick = "alternarRespuesta(1)"><img src = "Fotos/FlechaDerecha.png" class = "flechaHorizontal"</img>¿Cuándo saldrá el juego?</button>
 		<p id = "Pregunta1" class = "Respuesta" > Como se ha anunciado en el apartado de <a href = "#Objetivos" onclick = "hacerVisibleDinero()">objetivos</a>, desde McAcos nos comprometemos a publicar el primer capítulo tras llegar al presupuesto necesario, siendo la fecha límite 5 meses después de obtener los 1000€ necesarios. Así que, si no puedes esperar para jugar a <i>Dark Stained Love</i>... ¡no dudes en contribuir! </p>
 		
-		<button class = "Pregunta" onclick = "alternarRespuesta(2)"><img src = "Fotos/flechaDerecha.png" class = "flechaHorizontal"</img>¿Cuánto costará?</button>
+		<button class = "Pregunta" onclick = "alternarRespuesta(2)"><img src = "Fotos/FlechaDerecha.png" class = "flechaHorizontal"</img>¿Cuánto costará?</button>
 		<p class = "Respuesta" id = "Pregunta2"> <i> Dark Stained Love</i> será un juego comercializado por episodios. Como no creemos en el uso de anuncios como forma ideal de negocio, hemos optado por darle a cada capítulo un coste moderado de 1€. Una vez comprado un capítulo, los jugadores podrán jugarlo cuanto deseen sin tener que ver ningún tipo de anuncio ni pagar dinero extra. Además, planeamos sacar una versión completa de todo el juego por 5€ una vez los objetivos estén completados. </p> 
 		
-		<button class = "Pregunta" onclick = "alternarRespuesta(3)"><img src = "Fotos/flechaDerecha.png" class = "flechaHorizontal"</img>¿Qué tipo de beneficios me aporta colaborar?</button>
+		<button class = "Pregunta" onclick = "alternarRespuesta(3)"><img src = "Fotos/FlechaDerecha.png" class = "flechaHorizontal"</img>¿Qué tipo de beneficios me aporta colaborar?</button>
 		<p class = "Respuesta" id = "Pregunta3"> En el apartado de <a href = "#Contribuciones" onclick = "hacerVisibleDinero()">contribuciones</a> se puede consultar todo lo relacionado con los donativos al juego y los beneficios que estos suponen. Por supuesto, cualquier persona que lo desee puede contribuir con la suma que prefiera sin necesidad de comprar ningún artículo.  </p>
 		
-		<button class = "Pregunta" onclick = "alternarRespuesta(4)"><img src = "Fotos/flechaDerecha.png" class = "flechaHorizontal"</img>¿Podré jugar gratis al juego si colaboro?</button>
+		<button class = "Pregunta" onclick = "alternarRespuesta(4)"><img src = "Fotos/FlechaDerecha.png" class = "flechaHorizontal"</img>¿Podré jugar gratis al juego si colaboro?</button>
 		<p class = "Respuesta" id = "Pregunta4"> No. Las recompensas están listadas en contribuciones y son únicamente las ahí presentes. Sin embargo, no descartamos la posibilidad de hacer un sorteo de juegos gratis entre todos nuestros contribuidores. ¡Más información en nuestro <a href = "https://www.instagram.com/p/CcoBADaIvLs/?igshid=MDJmNzVkMjY=" target = "_blank"> Instagram</a>!</p>
 	
-		<button class = "Pregunta" onclick = "alternarRespuesta(5)"><img src = "Fotos/flechaDerecha.png" class = "flechaHorizontal"</img>¿Será tan bueno como <i> Julián</i>?</button>
+		<button class = "Pregunta" onclick = "alternarRespuesta(5)"><img src = "Fotos/FlechaDerecha.png" class = "flechaHorizontal"</img>¿Será tan bueno como <i> Julián</i>?</button>
 		<p class = "Respuesta" id = "Pregunta5"> No podemos garantizar que <i>Dark Stained Love</i> sea mucho mejor que nuestro primer y tan querido juego <i> <a href = "https://guajiro0.itch.io/julian" target = "_blank"> Julián</a></i>, pero sí podemos garantizar que intentaremos hacer el mejor trabajo posible, y para eso necesitamos vuestra ayuda. ¡No dudéis en escribir vuestras opiniones y críticas en nuestro <a href = "https://discord.gg/6BkNuAuV" target = "_blank"> Discord </a>oficial o en la sección de comentarios! </p>
 		
 	</div>
 	
 	
-	<button onclick = "ocultarComentarios()" id = "BotónComentarios" Type =  "Título">COMENTARIOS<img src = "Fotos/flechaAbajo.png" id = "abajoComents" Type = "flecha" </img> <img src = "Fotos/flechaArriba.png" id = "arribaComents" Type = "flecha" </img></button>
+	<button onclick = "ocultarComentarios()" id = "BotónComentarios" Type =  "Título">COMENTARIOS<img src = "Fotos/FlechaAbajo.png" id = "abajoComents" Type = "flecha" </img> <img src = "Fotos/FlechaArriba.png" id = "arribaComents" Type = "flecha" </img></button>
 		<div id = "Comentarios">
 			<widgetbot
 			  server="968950003567558736"
