--- a/index.html
+++ b/index.html
@@ -357,9 +357,13 @@
 	</div>
 	
 	
-	
-	<footer>Autor: McAcos, grupo C. El uso de cualquier material audiovisual de esta web con fines comerciales queda prohibido por derechos de autor.</footer> <br><br>
-	
+	<div>
+		<br><br><br><br><br>
+		<footer>Autor: McAcos, grupo C</footer>
+		<img src = "Fotos/Logo.png" class = "Logo"/img>
+		<footer>El uso de cualquier material audiovisual de esta web con fines comerciales queda prohibido por derechos de autor.</footer> 
+		<br><br>
+	</div>
 	
 	
 	<script src = "interact.js"></script>
